# cob_extern

./: .gitignore  .travis.yml  CMakeLists.txt  README  README.md  rosdep.yaml  stack.xml
.github/workflows/: main.yml
brics_oodl_scanner_libs/: CMakeLists.txt  Makefile  janpaulus-BRICS_OODL-e08295d.tar.gz.md5sum  mainpage.dox  manifest.xml
cob_extern/: CHANGELOG.rst  CMakeLists.txt  package.xml
leptonica/: CMakeLists.txt  package.xml
leptonica/cmake/: libleptonica-extras.cmake.in
libconcorde_tsp_solver/: CHANGELOG.rst  CMakeLists.txt  Makefile.tarball  build.sh  concorde-tsp-solver-20031219.tar.gz.md5sum  package.xml
libconcorde_tsp_solver/cmake/: libconcorde_tsp_solver-extras.cmake.in
libconcorde_tsp_solver/common/files/: TSP_order.txt  TSPlib_file.txt
libconcorde_tsp_solver/common/include/libconcorde_tsp_solver/: Readme.md
libcvd/: Makefile  manifest.xml  utility.h.patch.rmb  utility.patch
libdlib/: CHANGELOG.rst  CMakeLists.txt  Makefile.tarball  Readme.md  dlib-18.17.tar.bz2.md5sum  package.xml
libdlib/cmake/: libdlib-extras.cmake.in
libhokuyo_urg/: Makefile  Makefile.hokuyo  mainpage.dox  manifest.xml  urg-0.8.11.zip.md5sum
libleptonica/: CMakeLists.txt  Makefile.tarball  package.xml
libleptonica/lib/: README
libm5api/: Makefile  manifest.xml
libm5api/common/include/libm5api/: m5apiw32.h
libmesasr/: CMakeLists.txt  Makefile  mainpage.dox  manifest.xml  package.xml
libntcan/: CHANGELOG.rst  CMakeLists.txt  Makefile  Makefile.tarball  esdcan_make_devices  manifest.xml  package.xml
libntcan/common/include/libntcan/: ntcan.h
libntcan/common/lib/i686/: libntcan.so.3
libntcan/common/lib/x86_64/: libntcan.so.3
libopengm/: CHANGELOG.rst  CMakeLists.txt  Makefile.tarball  opengm-master.tar.gz.md5sum  opengm-master.zip.md5sum  package.xml
libopenmesh/: CMakeLists.txt  Makefile  manifest.xml
libpcan/: CHANGELOG.rst  CMakeLists.txt  Makefile  Makefile.peak  Makefile.tarball  install_pcan.sh  install_pcan_6.24.sh  install_pcan_7.6.sh  manifest.xml  package.xml  patch.diff  peak-linux-driver-6.24.tar.gz.md5sum  peak-linux-driver-7.15.2.tar.gz.md5sum  peak-linux-driver-7.6.tar.gz.md5sum  peak-linux-driver-7.9.tar.gz.md5sum  peak-linux-driver-8.3.tar.gz.md5sum  peak-linux-driver.6.11.tar.gz.md5sum
libpcan/cmake/: libpcan-extras.cmake.in
libpcan/common/include/libpcan/: libpcan.h  pcan.h
libphidgets/: CHANGELOG.rst  CMakeLists.txt  Makefile  Makefile.phidgets  Makefile.tarball  install_phidgets.sh  libphidget-2.1.8.20130618.tar.gz.md5sum  libphidget.tar.gz.md5sum  libphidget_2.1.7.20100621.tar.gz.md5sum  libphidget_2.1.8.20120716.tar.gz.md5sum  libphidget_2.1.8.20151217.tar.gz.md5sum  manifest.xml  package.xml
libphidgets/cmake/: libphidgets-extras.cmake.in
libphidgets/include/libphidgets/: phidget21.h
libqsopt/: CHANGELOG.rst  CMakeLists.txt  Readme.md  package.xml
libqsopt/cmake/: libqsopt-extras.cmake.in
libqsopt/common/include/libqsopt/: Readme.md
libqsopt/common/lib/Qsopt_32/: qsopt.h
libqsopt/common/lib/Qsopt_64/: qsopt.h
libsiftfast/: Makefile  mainpage.dox  manifest.xml
libtesseract/: CMakeLists.txt  Makefile.tarball  package.xml  tesseract-ocr-rev722.tar.gz.md5sum  tesseract.patch
libtesseract/cmake/: libtesseract-extras.cmake.in
libtoon/: Makefile  Makefile.toon  libtoon.tar.gz.md5sum  mainpage.dox  manifest.xml  size_mismatch.hh.patched  size_mismatch.patch
libwm4/: Makefile  manifest.xml
opengm/: CHANGELOG.rst  CMakeLists.txt  Makefile.tarball  Readme.md  package.xml
opengm/cmake/: opengm-extras.cmake.in
urg_driver/: Makefile  mainpage.dox  manifest.xml
