<package>
  <name>cob_extern</name>
  <version>0.6.0</version>
  <description>The cob_extern stack contains third party libraries needed for operating Care-O-bot. The packages are downloaded from the manufactorers website and not changed in any way.</description>
  <!-- <maintainer>Maintained by Florian Weisshardt</maintainer> -->

  <license>LGPL</license>
  <license>proprietary</license>

  <url type="website">http://ros.org/wiki/cob_extern</url>
  <url type="bugtracker">http://care-o-bot.org/trac</url>

  <maintainer email="fmw@ipa.fhg.de">Florian Weisshardt</maintainer>
  <maintainer email="nhg@ipa.fhg.de">Nadia Hammoudeh Garcia</maintainer>
  <author email="fmw@ipa.fhg.de">Florian Weisshardt</author>


  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>libphidgets</run_depend>
  <run_depend>libntcan</run_depend>
  <run_depend>libpcan</run_depend>





  <export>
    <metapackage/>
  </export>
</package>
