<?xml version="1.0"?>
<package format="2">
  <name>cob_extern</name>
  <version>0.6.2</version>
  <description>The cob_extern stack contains third party libraries needed for operating Care-O-bot. The packages are downloaded from the manufactorers website and not changed in any way.</description>

  <license>LGPL</license>
  <license>proprietary</license>

  <url type="website">http://ros.org/wiki/cob_extern</url>
  <url type="bugtracker">https://github.com/ipa320/cob_extern/issues</url>

  <maintainer email="fmw@ipa.fhg.de">Florian Weisshardt</maintainer>
  <maintainer email="nhg@ipa.fhg.de">Nadia Hammoudeh Garcia</maintainer>
  <author email="fmw@ipa.fhg.de">Florian Weisshardt</author>


  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>libntcan</exec_depend>
  <exec_depend>libpcan</exec_depend>
  <exec_depend>libphidgets</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
