<?xml version="1.0"?>
<package format="2">
	<name>libconcorde_tsp_solver</name>
	<version>0.1.0</version>
	<description>Wrapper for the concorde traveling salesman problem solver</description>
	
	<url type="website">http://www.math.uwaterloo.ca/tsp/concorde/downloads/downloads.htm</url>
	<author email="florian.jordan@ipa.fraunhofer.de">Florian Jordan</author>
	<maintainer email="richard.bormann@ipa.fraunhofer.de">Richard Bormann</maintainer>

	<license>LGPL</license>

	<buildtool_depend>catkin</buildtool_depend>

	<depend>libqsopt</depend>
	<depend>mk</depend>
	<depend>roslib</depend>
	<depend>rospack</depend>

</package>
