<?xml version="1.0"?>
<package format="2">
	<name>libconcorde_tsp_solver</name>
	<version>0.6.11</version>
	<description>Wrapper for the concorde traveling salesman problem solver. The code was obtained from http://www.math.uwaterloo.ca/tsp/concorde/downloads/downloads.htm all rights of it go to the corresponding authors David Applegate, Robert Bixby, Vasek Chvatal and William Cook. 
The library doesn't give a specific license, but is provided free for academic research use, for further licensing options contact William Cook.
	</description>

	<url type="website">http://www.math.uwaterloo.ca/tsp/concorde/downloads/downloads.htm</url>
	<author email="florian.jordan@ipa.fraunhofer.de">Florian Jordan</author>
	<maintainer email="richard.bormann@ipa.fraunhofer.de">Richard Bormann</maintainer>

	<license>free for academic research, for further licensing contact Wiliam Cook</license>

	<buildtool_depend>catkin</buildtool_depend>

	<depend>libqsopt</depend>

</package>
