<?xml version="1.0"?>
<package format="2">
	<name>libdlib</name>
	<version>0.6.11</version>
	<description>
		This package wraps the external c++ library dlib (http://dlib.net/) in a ROS package, so other packages can use it. The code was obtained from https://github.com/davisking/dlib . For further descriptions and tutorials see the Makefile.tarball and http://dlib.net/ .
	</description>

	<url type="website">http://dlib.net/</url>
	<author email="florian.jordan@ipa.fraunhofer.de">Florian Jordan</author>
	<maintainer email="richard.bormann@ipa.fraunhofer.de">Richard Bormann</maintainer>
	<license>Boost Software License</license>

	<buildtool_depend>catkin</buildtool_depend>

</package>
