<package>
  <name>libmesasr</name>
  <version>0.5.0</version>
  <description>This package wraps the libmesasr to use it as a ros dependency</description>
  <!-- <maintainer>Florian Weisshardt</maintainer> -->

  <license>LGPL</license>

  <url type="website">http://ros.org/wiki/libmesasr</url>
  <!-- <url type="bugtracker"></url> -->
  <maintainer email="fmw@ipa.fhg.de">Florian Weisshardt</maintainer>

  <author>Florian Weisshardt</author>

  <buildtool_depend>catkin</buildtool_depend>
  <export>
    <cpp lflags="-Wl,-rpath,${prefix}/common/lib -L${prefix}/common/lib -lmesasr" cflags="-I${prefix}/common/include -I${prefix}/common/include/libmesasr"/>
  </export>
</package>
