<?xml version="1.0"?>
<package format="2">
  <name>libntcan</name>
  <version>0.6.10</version>
  <description>This package wraps the libntcan to use it as a ros dependency.</description>

  <license>proprietary</license>

  <url type="website">http://www.esd-electronics.com</url>
  <maintainer email="fmw@ipa.fhg.de">Florian Weisshardt</maintainer>
  <author>Florian Weisshardt</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>dpkg</depend>

</package>
